--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pulsarjs",
   "version": "0.4.0",
-  "private": "true",
+  "private": "false",
   "dependencies": {
       "nedb": "",
       "node_hash": ""
