--- a/package.json
+++ b/package.json
@@ -1,10 +1,27 @@
 {
-  "name": "pulsarjs",
-  "version": "0.4.0",
-  "private": "false",
-  "dependencies": {
-      "nedb": "",
-      "node_hash": ""
-  }
+    "name": "pulsarjs",
+    "version": "0.5.0",
+    "private": "false",
+    "main": "lib/pulsar.js",
+    "description": "Pulsarjs is a simple function scheduler",
+    "homepage": "https://github.com/NicolaOrritos/pulsarjs",
+    "bugs": "https://github.com/NicolaOrritos/pulsarjs/issues",
+    "author": {
+        "name": "Nicola Orritos",
+        "email": "nicola.orritos@gmail.com"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/NicolaOrritos/pulsarjs.git"
+    },
+    "licenses": [
+        {
+            "type": "Apache v2"
+        }
+    ],
+    "dependencies": {
+        "nedb": "",
+        "node_hash": ""
+    }
 }
 
