--- a/package.json
+++ b/package.json
@@ -21,6 +21,13 @@
     "dependencies": {
         "nedb": "",
         "node_hash": ""
+    },
+    "devDependencies": {
+        "grunt-contrib-jshint": "~0.7.0",
+        "grunt-contrib-nodeunit": "~0.2.0",
+        "grunt-contrib-watch": "~0.5.0",
+        "time-grunt": "^0.2.9",
+        "load-grunt-tasks": "^0.4.0",
+        "jshint-stylish": "^0.1.5"
     }
 }
-
